# Metodo_Canny_SP

./: CMakeLists.txt  main.cpp  sonar-project.properties
.github/workflows/: sonarcloud.yml
